# personal-agent-platform

./: .gitignore  LICENSE  PROGRESS.md  README.md
cc-mobile/: .gitignore
cc-mobile/deploy/: cc-mobile.service
cc-mobile/server/: pyproject.toml
cc-mobile/server/cc_mobile/: __main__.py  api.py  detectors.py  event_bus.py  jsonl_tailer.py  options_discovery.py  pane_watcher.py  session_manager.py  state_store.py  tmux_controller.py  types.py
cc-mobile/server/tests/: conftest.py  test_api.py  test_event_bus.py  test_integration_resume.py  test_jsonl_tailer.py  test_session_manager.py  test_smoke.py  test_state_store.py  test_tmux_controller.py
cc-mobile/server/tests/fixtures/: fakeclaude.py
cc-mobile/server/tests/fixtures/jsonl/: sample_session.jsonl
cc-mobile/server/tests/fixtures/pane/: permission_bash.txt  permission_edit.txt
cc-mobile/web/: index.html
docs/: extraction-research.md
server/cc_mobile/: __init__.py  __main__.py  api.py  jsonl_tailer.py  options_discovery.py  session_manager.py  state_store.py  tmux_controller.py  types.py
server/tests/: test_api.py  test_detectors.py  test_jsonl_tailer.py  test_options_discovery.py  test_pane_watcher.py  test_session_manager.py  test_state_store.py  test_tmux_controller.py
tutor-extraction/scripts/: claude_code_learning_filter.py  cross_conversation_threading.py  extraction_harness.sh  extraction_prompt.txt  learning_style_deep_analysis.py  model_comparison.py  preprocess_conversations.py  signal_experiment.py  (+5 more)
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+65 files in other folders)
